fix role mappings regression bug (#17)
* fix role mappings regression bug

* fix CODEOWNERS

* fix log config

* fix sonar coverage

Co-authored-by: Rodolfo Viti <rodolfo.viti@nttdata.com>